Closed Bug 1765187 Opened 2 years ago Closed 2 years ago

Video with mismatched matrix coefficients and color primaries will ignore color primaries

Categories

(Core :: Audio/Video: Playback, defect, P3)

defect

Tracking

()

RESOLVED FIXED
107 Branch
Tracking Status
firefox107 --- fixed

People

(Reporter: bradwerth, Assigned: bradwerth)

References

(Blocks 1 open bug)

Details

Attachments

(3 files)

What Firefox code refers to as a video's colorspace is derived from the video's matrix coefficients, during the demuxing step of the video pipeline. Later in the video pipeline, Firefox decoders set color primaries and transfer functions based on the colorspace. This works as long as the matrix coefficients match the color primaries.

Instead, Firefox decoders could independently track color primaries and set the corresponding flags when using an OS-defined display compositor.

Blocks: hdr-youtube
See Also: → 1764618

Output from MediaInfo:

Format                                   : WebM
Format version                           : Version 2
File size                                : 22.8 MiB
Duration                                 : 8 s 341 ms
Overall bit rate                         : 22.9 Mb/s
Writing application                      : Lavf59.16.100
Writing library                          : Lavf59.16.100

Video
ID                                       : 1
Format                                   : VP9
HDR format                               : SMPTE ST 2086, HDR10 compatible
Codec ID                                 : V_VP9
Duration                                 : 8 s 341 ms
Bit rate                                 : 22.0 Mb/s
Width                                    : 3 840 pixels
Height                                   : 2 160 pixels
Display aspect ratio                     : 16:9
Frame rate mode                          : Constant
Frame rate                               : 23.976 (24000/1001) FPS
Color space                              : YUV
Bits/(Pixel*Frame)                       : 0.111
Stream size                              : 21.9 MiB (96%)
Language                                 : English
Default                                  : Yes
Forced                                   : No
Color range                              : Limited
Color primaries                          : BT.2020
Transfer characteristics                 : PQ
Matrix coefficients                      : BT.709
Mastering display color primaries        : Display P3
Mastering display luminance              : min: 0.0050 cd/m2, max: 1000 cd/m2
See Also: → 1768824
Attachment #9292946 - Attachment description: WIP: Bug 1765187 Part 1: Track color primaries independently from coefficients. → Bug 1765187 Part 1: Track color primaries independently from coefficients.
Attachment #9293351 - Attachment description: WIP: Bug 1765187 Part 2: Make macOS video decoder recognize and use color primaries. → Bug 1765187 Part 2: Make macOS video decoder recognize and use color primaries.
Pushed by bwerth@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1b7467ce135d
Part 1: Track color primaries independently from coefficients. r=media-playback-reviewers,jgilbert,alwu
https://hg.mozilla.org/integration/autoland/rev/449e728b3f9c
Part 2: Make macOS video decoder recognize and use color primaries. r=media-playback-reviewers,jgilbert,alwu
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 107 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: