Bug 1765187 Part 2: Make macOS video decoder recognize and use color primaries. r=media-playback-reviewers,jgilbert,alwu

Differential Revision: https://phabricator.services.mozilla.com/D156587